# omplBench

./: .clang-format  CMakeLists.txt  README.md
examples/: main.cpp
include/config/: config.h
include/config/obstacles/: obstacles.csv
